--- a/src/main/resources/confluent-tools.properties
+++ b/src/main/resources/confluent-tools.properties
@@ -19,6 +19,7 @@ confluent.connect.pass=
 
 # confluent
 confluent.zookeeper.url=192.168.56.10:2181
+confluent.broker.url=192.168.56.10:9092
 
 # web interface (optional)
 confluent.tools.web.root=/tmp/wwwroot
